проверка на занятую клетку

--- a/Scan/Scan/MakeScan.resx
+++ b/Scan/Scan/MakeScan.resx
@@ -1586,7 +1586,7 @@
         TkSuQmCC
 </value>
   </data>
-  <data name="toolStripButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="deleteTask.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAJegSURBVHhe7Z0JuBTFuf7vvZF9X2QHEZBNBBUXAhHiAu4a
