--- a/Scan/Scan/MakeScan.resx
+++ b/Scan/Scan/MakeScan.resx
@@ -127,7 +127,7 @@
   <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAomSURBVHhe7Z0hTyRJHEf3AxA8ahWCBINAYfE4PgByHAqF
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAomSURBVHhe7Z0hTyRJHEf3AxA8ahWCBINAYfE4PgByHAqF
         XY/EEzQJDoXCrcLicGuwuLn85oYct138u6mZ+lX19HvJU3eZ3EzVu+7qrm5+zEfC29vb/OHhYX59fT0/
         Pz+fHx0dzff39+c7Ozvz7e1tLKx+58/+/Plz4d7e3vzw8HB+fHy88OXlZTliMJSmI9SA/vr1axHcjx8/
         cCQS4vdoMsL7+/vF/1VTA4ztqyMnIQ6nqQh1uqlTnNTA4vgkxGE0EaEG6+TkJDmQOG4JsZ/qEd7d3SUH
@@ -177,7 +177,7 @@
   <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAA0DSURBVHhe7Z2tUiTLFkb7DbAIFBqBQSERBA8wAoVEYgkc
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA0DSURBVHhe7Z2tUiTLFkb7DbAIFBqBQSERBA8wAoVEYgkc
         AovCjxiD4AlGjhl/FBLDA4AZMxF97lenmtsUu7vyP+tnrYh1j7lUVff0112VuXPnYgkAVSGEAJUhhACV
         IYQAlSGEAJUhhACVIYQAlSGEAJUhhACVIYQAlSGEM+T19XX569ev5ffv35d3d3fLy8vL5enp6fLo6Gh5
         eHg4Ks/OzpZXV1fLh4eH5jW9v7+3r3I8EMIZ8PLysvzx48fy4uJiuVgsJu/x8XHzet/e3tp3YNgQwomi
@@ -239,7 +239,7 @@
   <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAZySURBVHhe7d0xbhRJFIBh7x6HiAOQIZFwCmJSYoeEHICc
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAZySURBVHhe7d0xbhRJFIBh7x6HiAOQIZFwCmJSYoeEHICc
         E4yTRXJORkbEAXwA8lk9y7PaXc0UPT3T9ar8vl/6I7C7yv1+dTkY980fN3/un6s3Nzf7nz9/7jEvcf/i
         Ph67v6eM/x/e398/fZexESGGZk2E4SHEr399ffpO4yJCDM3aCMNDiKM/EUWIobkkwnCGEEWIobk0wvAQ
         4qhHUxFiaK4RYThyiCLE0FwrwvAQ4mhHUxFiaK4ZYXgIcaQnoggxNNeOMBwtRBFiaLaIMBwpRBFiaLaK
@@ -273,7 +273,7 @@
   <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAOK4SURBVHhe7L0HuF1lmff91VcFEkILIUDoIB1FQUF67xBK
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAOK4SURBVHhe7L0HuF1lmff91VcFEkILIUDoIB1FQUF67xBK
         6B0REZDemyjqFOed+WZGXx1n1FFfRUB66L33XkMogdBrgvN+9fnm95D/5j5P1j45ydn7nLX2+f+u677W
         2mvv5KynrOf+r/tp/1MyZhj5//6//y+bMaZ//Kz0Lv/v//v/zjr79Pz//r//73z+f/1f/1c+wv/z//w/
         rd9xpC5wTfBvYv3gO33+P//P/zO98sor6f77709XXHFF+slPfpK+853vpF133TVts802aYMNNkhrr712
@@ -1247,7 +1247,7 @@
   <data name="toolStripButton5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAE6XSURBVHhe7d0JfJ1lnf7/tE3TpkvSjbKUpQtQZGQr0AFE
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAE6XSURBVHhe7d0JfJ1lnf7/tE3TpkvSjbKUpQtQZGQr0AFE
         FgXUgiwqjjoIKIojyohsDjoqOoo6iiCKyx8RHUVEUEQREZ0Z8YdsIlspqzBaltKW0i1p06Tl+891n3xP
         7jw8aXOyPfdJPtfr9X6d55zknJykPfe5zv1sNUZIgXn55ZcDQsjmw2uFkP7JUHstUeRIoeHNiZCehdcK
         If2TofZaosiRQsObEyE9C68VQvonQ+21RJEjhYY3J0J6Fl4rhPRPhtpriSJHCg1vToT0LLxWCOmfDLXX
@@ -1589,7 +1589,7 @@
   <data name="toolStripButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAJegSURBVHhe7Z0JuBTFuf7vvZF9X2QHEZBNBBUXAhHiAu4a
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAJegSURBVHhe7Z0JuBTFuf7vvZF9X2QHEZBNBBUXAhHiAu4a
         dwVxjWLcN9RoIm5EcUtUFKO4m2gARRQjihsaoyKuiKgIyi6gsq/m/ut/32K+pqZPz8w5c850V1W/v+d5
         n+6Zs8xUdX1fvV1d3fVfipAE+X//7/9puc7PP/+c2cveB/Jayvq///u/+jW2//nPf/T+2rVr1Xvvvaf+
         +te/quHDh6sTTzxR7bfffqp79+6qVatWqmbNmuq///u/1X/913/prexTVFUo3J5+8YtfqOrVq6uWLVvq
@@ -2242,7 +2242,7 @@
   <data name="toolStripButton7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAKFKSURBVHhe7Z0HmFTV+cZBBXaXKr2ISJEuBgKKqCCKvSuK
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAKFKSURBVHhe7Z0HmFTV+cZBBXaXKr2ISJEuBgKKqCCKvSuK
         GjVW7C2CJRiNGjVqrLFXrBhNiLHErijYUVFARUClKCDSe8n/++977r6zZy93C7szO3Nn3t/zvM8tM7Nl
         7rnne+93Wg0TIo383//9n1Mug/9/48aNTj78Xvh6FGW9h6+R8HFpP9OnrM/873//K9q6jWPjxv+zxYuX
         2rfffmcTJnxg//3vq/b88y/YmDH/sNGjH7cHHnjI/v73u+3mm2+x6667wf74xyvskksuswsuuMjOOOMs
@@ -2939,7 +2939,7 @@
   <data name="toolStripButton8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAomSURBVHhe7Z0hTyRJHEf3AxA8ahWCBINAYfE4PgByHAqF
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAomSURBVHhe7Z0hTyRJHEf3AxA8ahWCBINAYfE4PgByHAqF
         XY/EEzQJDoXCrcLicGuwuLn85oYct138u6mZ+lX19HvJU3eZ3EzVu+7qrm5+zEfC29vb/OHhYX59fT0/
         Pz+fHx0dzff39+c7Ozvz7e1tLKx+58/+/Plz4d7e3vzw8HB+fHy88OXlZTliMJSmI9SA/vr1axHcjx8/
         cCQS4vdoMsL7+/vF/1VTA4ztqyMnIQ6nqQh1uqlTnNTA4vgkxGE0EaEG6+TkJDmQOG4JsZ/qEd7d3SUH
@@ -2989,7 +2989,7 @@
   <data name="toolStripButton9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAA0DSURBVHhe7Z2tUiTLFkb7DbAIFBqBQSERBA8wAoVEYgkc
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA0DSURBVHhe7Z2tUiTLFkb7DbAIFBqBQSERBA8wAoVEYgkc
         AovCjxiD4AlGjhl/FBLDA4AZMxF97lenmtsUu7vyP+tnrYh1j7lUVff0112VuXPnYgkAVSGEAJUhhACV
         IYQAlSGEAJUhhACVIYQAlSGEAJUhhACVIYQAlSGEM+T19XX569ev5ffv35d3d3fLy8vL5enp6fLo6Gh5
         eHg4Ks/OzpZXV1fLh4eH5jW9v7+3r3I8EMIZ8PLysvzx48fy4uJiuVgsJu/x8XHzet/e3tp3YNgQwomi
@@ -3051,7 +3051,7 @@
   <data name="toolStripButton10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAZySURBVHhe7d0xbhRJFIBh7x6HiAOQIZFwCmJSYoeEHICc
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAZySURBVHhe7d0xbhRJFIBh7x6HiAOQIZFwCmJSYoeEHICc
         E4yTRXJORkbEAXwA8lk9y7PaXc0UPT3T9ar8vl/6I7C7yv1+dTkY980fN3/un6s3Nzf7nz9/7jEvcf/i
         Ph67v6eM/x/e398/fZexESGGZk2E4SHEr399ffpO4yJCDM3aCMNDiKM/EUWIobkkwnCGEEWIobk0wvAQ
         4qhHUxFiaK4RYThyiCLE0FwrwvAQ4mhHUxFiaK4ZYXgIcaQnoggxNNeOMBwtRBFiaLaIMBwpRBFiaLaK
@@ -3085,7 +3085,7 @@
   <data name="toolStripButton11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAE6XSURBVHhe7d0JfJ1lnf7/tE3TpkvSjbKUpQtQZGQr0AFE
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAE6XSURBVHhe7d0JfJ1lnf7/tE3TpkvSjbKUpQtQZGQr0AFE
         FgXUgiwqjjoIKIojyohsDjoqOoo6iiCKyx8RHUVEUEQREZ0Z8YdsIlspqzBaltKW0i1p06Tl+891n3xP
         7jw8aXOyPfdJPtfr9X6d55zknJykPfe5zv1sNUZIgXn55ZcDQsjmw2uFkP7JUHstUeRIoeHNiZCehdcK
         If2TofZaosiRQsObEyE9C68VQvonQ+21RJEjhYY3J0J6Fl4rhPRPhtpriSJHCg1vToT0LLxWCOmfDLXX
@@ -3427,7 +3427,7 @@
   <data name="toolStripButton12.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAJegSURBVHhe7Z0JuBTFuf7vvZF9X2QHEZBNBBUXAhHiAu4a
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAJegSURBVHhe7Z0JuBTFuf7vvZF9X2QHEZBNBBUXAhHiAu4a
         dwVxjWLcN9RoIm5EcUtUFKO4m2gARRQjihsaoyKuiKgIyi6gsq/m/ut/32K+pqZPz8w5c850V1W/v+d5
         n+6Zs8xUdX1fvV1d3fVfipAE+X//7/9puc7PP/+c2cveB/Jayvq///u/+jW2//nPf/T+2rVr1Xvvvaf+
         +te/quHDh6sTTzxR7bfffqp79+6qVatWqmbNmuq///u/1X/913/prexTVFUo3J5+8YtfqOrVq6uWLVvq
@@ -4080,7 +4080,7 @@
   <data name="toolStripButton13.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAOK4SURBVHhe7L0HuF1lmff91VcFEkILIUDoIB1FQUF67xBK
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAOK4SURBVHhe7L0HuF1lmff91VcFEkILIUDoIB1FQUF67xBK
         6B0REZDemyjqFOed+WZGXx1n1FFfRUB66L33XkMogdBrgvN+9fnm95D/5j5P1j45ydn7nLX2+f+u677W
         2mvv5KynrOf+r/tp/1MyZhj5//6//y+bMaZ//Kz0Lv/v//v/zjr79Pz//r//73z+f/1f/1c+wv/z//w/
         rd9xpC5wTfBvYv3gO33+P//P/zO98sor6f77709XXHFF+slPfpK+853vpF133TVts802aYMNNkhrr712
@@ -5054,7 +5054,7 @@
   <data name="toolStripButton14.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAKFKSURBVHhe7Z0HmFTV+cZBBXaXKr2ISJEuBgKKqCCKvSuK
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAKFKSURBVHhe7Z0HmFTV+cZBBXaXKr2ISJEuBgKKqCCKvSuK
         GjVW7C2CJRiNGjVqrLFXrBhNiLHErijYUVFARUClKCDSe8n/++977r6zZy93C7szO3Nn3t/zvM8tM7Nl
         7rnne+93Wg0TIo383//9n1Mug/9/48aNTj78Xvh6FGW9h6+R8HFpP9OnrM/873//K9q6jWPjxv+zxYuX
         2rfffmcTJnxg//3vq/b88y/YmDH/sNGjH7cHHnjI/v73u+3mm2+x6667wf74xyvskksuswsuuMjOOOMs
@@ -5751,7 +5751,7 @@
   <data name="toolStripButton15.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAomSURBVHhe7Z0hTyRJHEf3AxA8ahWCBINAYfE4PgByHAqF
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAomSURBVHhe7Z0hTyRJHEf3AxA8ahWCBINAYfE4PgByHAqF
         XY/EEzQJDoXCrcLicGuwuLn85oYct138u6mZ+lX19HvJU3eZ3EzVu+7qrm5+zEfC29vb/OHhYX59fT0/
         Pz+fHx0dzff39+c7Ozvz7e1tLKx+58/+/Plz4d7e3vzw8HB+fHy88OXlZTliMJSmI9SA/vr1axHcjx8/
         cCQS4vdoMsL7+/vF/1VTA4ztqyMnIQ6nqQh1uqlTnNTA4vgkxGE0EaEG6+TkJDmQOG4JsZ/qEd7d3SUH
@@ -5801,7 +5801,7 @@
   <data name="toolStripButton16.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAA0DSURBVHhe7Z2tUiTLFkb7DbAIFBqBQSERBA8wAoVEYgkc
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA0DSURBVHhe7Z2tUiTLFkb7DbAIFBqBQSERBA8wAoVEYgkc
         AovCjxiD4AlGjhl/FBLDA4AZMxF97lenmtsUu7vyP+tnrYh1j7lUVff0112VuXPnYgkAVSGEAJUhhACV
         IYQAlSGEAJUhhACVIYQAlSGEAJUhhACVIYQAlSGEM+T19XX569ev5ffv35d3d3fLy8vL5enp6fLo6Gh5
         eHg4Ks/OzpZXV1fLh4eH5jW9v7+3r3I8EMIZ8PLysvzx48fy4uJiuVgsJu/x8XHzet/e3tp3YNgQwomi
@@ -5863,7 +5863,7 @@
   <data name="toolStripButton17.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAZySURBVHhe7d0xbhRJFIBh7x6HiAOQIZFwCmJSYoeEHICc
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAZySURBVHhe7d0xbhRJFIBh7x6HiAOQIZFwCmJSYoeEHICc
         E4yTRXJORkbEAXwA8lk9y7PaXc0UPT3T9ar8vl/6I7C7yv1+dTkY980fN3/un6s3Nzf7nz9/7jEvcf/i
         Ph67v6eM/x/e398/fZexESGGZk2E4SHEr399ffpO4yJCDM3aCMNDiKM/EUWIobkkwnCGEEWIobk0wvAQ
         4qhHUxFiaK4RYThyiCLE0FwrwvAQ4mhHUxFiaK4ZYXgIcaQnoggxNNeOMBwtRBFiaLaIMBwpRBFiaLaK
@@ -5897,7 +5897,7 @@
   <data name="toolStripButton18.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAE6XSURBVHhe7d0JfJ1lnf7/tE3TpkvSjbKUpQtQZGQr0AFE
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAE6XSURBVHhe7d0JfJ1lnf7/tE3TpkvSjbKUpQtQZGQr0AFE
         FgXUgiwqjjoIKIojyohsDjoqOoo6iiCKyx8RHUVEUEQREZ0Z8YdsIlspqzBaltKW0i1p06Tl+891n3xP
         7jw8aXOyPfdJPtfr9X6d55zknJykPfe5zv1sNUZIgXn55ZcDQsjmw2uFkP7JUHstUeRIoeHNiZCehdcK
         If2TofZaosiRQsObEyE9C68VQvonQ+21RJEjhYY3J0J6Fl4rhPRPhtpriSJHCg1vToT0LLxWCOmfDLXX
@@ -6239,7 +6239,7 @@
   <data name="toolStripButton19.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAJegSURBVHhe7Z0JuBTFuf7vvZF9X2QHEZBNBBUXAhHiAu4a
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAJegSURBVHhe7Z0JuBTFuf7vvZF9X2QHEZBNBBUXAhHiAu4a
         dwVxjWLcN9RoIm5EcUtUFKO4m2gARRQjihsaoyKuiKgIyi6gsq/m/ut/32K+pqZPz8w5c850V1W/v+d5
         n+6Zs8xUdX1fvV1d3fVfipAE+X//7/9puc7PP/+c2cveB/Jayvq///u/+jW2//nPf/T+2rVr1Xvvvaf+
         +te/quHDh6sTTzxR7bfffqp79+6qVatWqmbNmuq///u/1X/913/prexTVFUo3J5+8YtfqOrVq6uWLVvq
@@ -6895,7 +6895,7 @@
   <data name="toolStripButton20.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAomSURBVHhe7Z0hTyRJHEf3AxA8ahWCBINAYfE4PgByHAqF
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAomSURBVHhe7Z0hTyRJHEf3AxA8ahWCBINAYfE4PgByHAqF
         XY/EEzQJDoXCrcLicGuwuLn85oYct138u6mZ+lX19HvJU3eZ3EzVu+7qrm5+zEfC29vb/OHhYX59fT0/
         Pz+fHx0dzff39+c7Ozvz7e1tLKx+58/+/Plz4d7e3vzw8HB+fHy88OXlZTliMJSmI9SA/vr1axHcjx8/
         cCQS4vdoMsL7+/vF/1VTA4ztqyMnIQ6nqQh1uqlTnNTA4vgkxGE0EaEG6+TkJDmQOG4JsZ/qEd7d3SUH
@@ -6945,7 +6945,7 @@
   <data name="toolStripButton21.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAA0DSURBVHhe7Z2tUiTLFkb7DbAIFBqBQSERBA8wAoVEYgkc
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA0DSURBVHhe7Z2tUiTLFkb7DbAIFBqBQSERBA8wAoVEYgkc
         AovCjxiD4AlGjhl/FBLDA4AZMxF97lenmtsUu7vyP+tnrYh1j7lUVff0112VuXPnYgkAVSGEAJUhhACV
         IYQAlSGEAJUhhACVIYQAlSGEAJUhhACVIYQAlSGEM+T19XX569ev5ffv35d3d3fLy8vL5enp6fLo6Gh5
         eHg4Ks/OzpZXV1fLh4eH5jW9v7+3r3I8EMIZ8PLysvzx48fy4uJiuVgsJu/x8XHzet/e3tp3YNgQwomi
@@ -7007,7 +7007,7 @@
   <data name="toolStripButton22.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAZySURBVHhe7d0xbhRJFIBh7x6HiAOQIZFwCmJSYoeEHICc
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAZySURBVHhe7d0xbhRJFIBh7x6HiAOQIZFwCmJSYoeEHICc
         E4yTRXJORkbEAXwA8lk9y7PaXc0UPT3T9ar8vl/6I7C7yv1+dTkY980fN3/un6s3Nzf7nz9/7jEvcf/i
         Ph67v6eM/x/e398/fZexESGGZk2E4SHEr399ffpO4yJCDM3aCMNDiKM/EUWIobkkwnCGEEWIobk0wvAQ
         4qhHUxFiaK4RYThyiCLE0FwrwvAQ4mhHUxFiaK4ZYXgIcaQnoggxNNeOMBwtRBFiaLaIMBwpRBFiaLaK
@@ -7041,7 +7041,7 @@
   <data name="toolStripButton23.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAnIAAAJyCAYAAABALi2VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAE6XSURBVHhe7d0JfJ1lnf7/tE3TpkvSjbKUpQtQZGQr0AFE
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAE6XSURBVHhe7d0JfJ1lnf7/tE3TpkvSjbKUpQtQZGQr0AFE
         FgXUgiwqjjoIKIojyohsDjoqOoo6iiCKyx8RHUVEUEQREZ0Z8YdsIlspqzBaltKW0i1p06Tl+891n3xP
         7jw8aXOyPfdJPtfr9X6d55zknJykPfe5zv1sNUZIgXn55ZcDQsjmw2uFkP7JUHstUeRIoeHNiZCehdcK
         If2TofZaosiRQsObEyE9C68VQvonQ+21RJEjhYY3J0J6Fl4rhPRPhtpriSJHCg1vToT0LLxWCOmfDLXX
@@ -7383,7 +7383,7 @@
   <data name="toolStripButton24.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
         YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
         0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
         bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
@@ -7398,7 +7398,7 @@
   <data name="toolStripButton25.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
         YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
         0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
         bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
@@ -7414,6 +7414,9 @@
     <value>437, 17</value>
   </metadata>
   <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>628, 17</value>
+    <value>640, 20</value>
+  </metadata>
+  <metadata name="saveFileDialog2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>802, 20</value>
   </metadata>
 </root>
